--- a/Labguide/04.adoc
+++ b/Labguide/04.adoc
@@ -51,6 +51,7 @@ spec:
   containers:
   - image: alpine
     name: alpine
+    imagePullPolicy: IfNotPresent
     command: ["/bin/sh"]
     args: ["-c", "while true; do date >> /etc/kal-directory/date-file.txt; sleep 5; done"]
     volumeMounts:
@@ -58,6 +59,7 @@ spec:
         mountPath: /etc/kal-directory
   - image: nginx
     name: nginx
+    imagePullPolicy: IfNotPresent
     volumeMounts:
       - name: log-date-vol
         mountPath: /etc/kal-directory
@@ -81,7 +83,7 @@ kubectl delete po alpine
 . Create a pod that defines an application container which writes the process to a file every 10 seconds. Create a adapter container that writes the datetime and the top 3 processes consuming maximum memory in a report file.
 
 +
-HINT: Use the command`ps aux` and sort it based on memory usage . The output format may slightly vary based on the OS kernel.
+HINT: Use the command `ps aux` and sort it based on memory usage . The output format may slightly vary based on the OS kernel.
 
 +
 Sample Output
@@ -118,6 +120,7 @@ spec:
   containers:
     - image: ubuntu
       name: ubuntu
+      imagePullPolicy: IfNotPresent
       command: ["/bin/sh"]
       args: ["-c", "while true; do ps aux --sort=-pmem > /logs/output.txt; sleep 10; done"]
       volumeMounts:
@@ -125,6 +128,7 @@ spec:
           mountPath: /logs
     - image: alpine
       name: alpine
+      imagePullPolicy: IfNotPresent
       command: ["/bin/sh"]
       args: ["-c", "while true; do date > /logs/report.txt; cat /logs/output.txt | head -4 >> /logs/report.txt; sleep 10; done"]
       volumeMounts:
@@ -200,6 +204,7 @@ spec:
   containers:
     - image: ubuntu
       name: ubuntu
+      imagePullPolicy: IfNotPresent
       command: ["/bin/sh"]
       args: ["-c", "while true; do date > /logs/output.txt; free -tw --giga >> /logs/output.txt; sleep 10; done"]
       volumeMounts:
@@ -207,6 +212,7 @@ spec:
           mountPath: /logs
     - image: alpine
       name: alpine
+      imagePullPolicy: IfNotPresent
       command: ["/bin/sh"]
       args: ["-c", "while true; do echo  'Date: ' $(cat /logs/output.txt |  head -1) > /logs/report.txt; echo 'Total Memory:' $(cat /logs/output.txt |  grep Total: | tr -s ' ' | cut -d ' ' -f 2) GB >> /logs/report.txt; echo 'Free Memory:' $(cat /logs/output.txt |  grep Total: | tr -s ' ' | cut -d ' ' -f 3) GB >> /logs/report.txt; sleep 10; done"]
       volumeMounts:
