--- a/Labguide/07.adoc
+++ b/Labguide/07.adoc
@@ -53,6 +53,7 @@ spec:
       containers:
       - image: busybox
         name: busybox
+        imagePullPolicy: IfNotPresent
         command: ["/bin/sh"]
         args: ["-c","date"]
       restartPolicy: OnFailure
@@ -62,9 +63,14 @@ spec:
 ------------------
 kubectl apply -f ~/workspace/kubernetes-manifests/competencies/jobs/job-1.yaml
 kubectl get job busybox
-kubectl get pods
+kubectl get pods -w
+------------------
+
+[source, shell script]
+------------------
 kubectl logs <job-pod-name>
 ------------------
+
 [source, shell script]
 ------------------
 kubectl delete job busybox
@@ -98,6 +104,7 @@ spec:
       containers:
         - name: job-3
           image: alpine
+          imagePullPolicy: IfNotPresent
           command: ["/bin/sh"]
           args: ["-c", "if [ \"$(shuf -i 1-6 -n 1)\" = \"6\" ]; then exit 0; else exit 1; fi"]
 ------------------
@@ -139,6 +146,7 @@ spec:
           containers:
           - image: busybox
             name: job-5
+            imagePullPolicy: IfNotPresent
             command: ["/bin/sh"]
             args: ["-c","date"]
           restartPolicy: OnFailure
@@ -191,6 +199,7 @@ spec:
           containers:
           - image: busybox
             name: job-6
+            imagePullPolicy: IfNotPresent
             command: ["/bin/sh"]
             args: ["-c","Time: 3.30 pm. It is break time. Lets stretch out a bit or have a coffee!"]
             volumeMounts:
