--- a/Labguide/1.1-.NET.adoc
+++ b/Labguide/1.1-.NET.adoc
@@ -53,6 +53,17 @@ namespace Controllers
 }
 ---------------
 
+. Update the server port to 8080
+
++
+`~/workspace/Pages/Properties/launchSettings.json`
+
++
+
+[source,shell script]
+---------------
+"applicationUrl" : "http://localhost:8080"
+---------------
 
 == Build and Run the application
 
@@ -77,9 +88,9 @@ dotnet run
 +
 [source,shell script]
 ---------------
-Browse to http://localhost:5000
+Browse to http://localhost:8080
 ---------------
-Note the port being exposed here in the example is 5000, which might be different in some cases.
+Note the port being exposed here in the example is 8080, which might be different in some cases.
 After verifying, stop the running instance in the terminal and proceed to the next step.
 
 +
@@ -95,7 +106,7 @@ dotnet publish -c Release
 
 . Create a new file named `Dockerfile` inside root project folder & add instructions to download the base image.
 In order to run the application, use the image- `mcr.microsoft.com/dotnet/aspnet:5.0`.
-Add instructions to copy the dependencies & build artifacts(dll) from the local directory into the docker image. Expose port 5000 and update the ASPNETCORE_URLS environment variable to `http://+:5000`
+Add instructions to copy the dependencies & build artifacts(dll) from the local directory into the docker image. Expose port 8080 and update the ASPNETCORE_URLS environment variable to `http://+:8080`
 Finally, Provide a command or an entrypoint to start the application within the docker container
 
 +
@@ -105,7 +116,7 @@ Finally, Provide a command or an entrypoint to start the application within the 
 
 [source, java]
 ---------------
-cd ~/workspace/pages
+cd ~/workspace/Pages
 
 touch Dockerfile
 ---------------
@@ -121,8 +132,8 @@ touch Dockerfile
 FROM mcr.microsoft.com/dotnet/aspnet:5.0
 COPY bin/Release/net5.0/publish App/
 WORKDIR /App
-EXPOSE 5000
-ENV ASPNETCORE_URLS=http://+:5000
+EXPOSE 8080
+ENV ASPNETCORE_URLS=http://+:8080
 ENTRYPOINT ["dotnet", "Pages.dll"]
 ---------------
 
@@ -155,13 +166,13 @@ docker images
 
 [source,java]
 ---------------------------------------------------------------------
-docker run -p 5000:5000 pages
+docker run -p 8080:8080 pages
 ---------------------------------------------------------------------
 
 +
-In the run command, we have specified that the port 5000 on the container should be mapped to the port 5000 on the Host OS.
+In the run command, we have specified that the port 8080 on the container should be mapped to the port 8080 on the Host OS.
 +
-Once the application is started, you should be able to access it at link:http://localhost:5000["http://localhost:5000", window="_blank"]
+Once the application is started, you should be able to access it at link:http://localhost:8080["http://localhost:8080", window="_blank"]
 +
 The container runs in the foreground. You can run the  container in the background using -d option.
 +
@@ -215,30 +226,6 @@ docker push [docker-username]/pages:1.0
 +
 [source,java]
 ---------------------------------------------------------------------
-docker run -p 5000:5000 [docker-username]/pages:1.0
+docker run -p 8080:8080 [docker-username]/pages:1.0
 
----------------------------------------------------------------------
-
-== Setting up the codebase
-
-
-. Create a repository called `pages` in your GitHub account. You will need to initialize the local codebase as a git repo & add your remote repository url prior to executing any commits on it
-
-+
-[source,java]
----------------------------------------------------------------------
-git init
-git remote add origin https://github.com/[your-github-user-name]/pages.git
----------------------------------------------------------------------
-
-. Commit code to your github repository
-
-+
-[source,java]
----------------------------------------------------------------------
-git add .
-git config --global user.name "your-team-name"
-git config --global user.email "your-git-email-address"
-git commit -m "Spring Boot - Lab 1"
-git push -u origin master
 ---------------------------------------------------------------------
