--- a/Labguide/11.adoc
+++ b/Labguide/11.adoc
@@ -121,7 +121,7 @@ pv:
     storage: 3Gi
   accessMode: ReadWriteMany
   hostPath:
-    path: "/var/lib/mysql/dev"
+    path: "/var/lib/mysql/[replace-this-with-your-namespace]"
 pvc:
   resources:
     requests:
