--- a/Labguide/07-Pages-Curl-Commands.adoc
+++ b/Labguide/07-Pages-Curl-Commands.adoc
@@ -11,7 +11,7 @@ Requires the service to be running on localhost and port 8080. When working on t
 
 .Create a page
 
-[source, java]
+[source, shell script]
 ------------------
 
 curl -i -XPOST -H"Content-Type: application/json" localhost:8080/pages -d"{\"businessName\": \"Uber\", \"address\": \"SanFrancisco, CA, USA\", \"categoryId\": 123, \"contactNumber\": \"0045987869\"}"
@@ -20,7 +20,7 @@ curl -i -XPOST -H"Content-Type: application/json" localhost:8080/pages -d"{\"bus
 
 .Get a page by ID
 
-[source, java]
+[source, shell script]
 ------------------
 
 curl -i localhost:8080/pages/${PAGE_ID}
@@ -29,7 +29,7 @@ curl -i localhost:8080/pages/${PAGE_ID}
 
 .Update a page by ID
 
-[source, java]
+[source, shell script]
 ------------------
 
 curl -i -XPUT -H"Content-Type: application/json" localhost:8080/pages/${PAGE_ID} -d"{\"businessName\": \"Uber Technologies\", \"address\": \"SanFrancisco, CA, USA\", \"categoryId\": 123, \"contactNumber\": \"0045987869\"}"
@@ -37,7 +37,7 @@ curl -i -XPUT -H"Content-Type: application/json" localhost:8080/pages/${PAGE_ID}
 ------------------
 
 .List all pages
-[source, java]
+[source, shell script]
 ------------------
 
 curl -i localhost:8080/pages
@@ -46,7 +46,7 @@ curl -i localhost:8080/pages
 
 .Delete a page by ID
 
-[source, java]
+[source, shell script]
 ------------------
 
 curl -i -XDELETE -H"Content-Type: application/json" localhost:8080/pages/${PAGE_ID}
